fixed overflow x

--- a/main.css
+++ b/main.css
@@ -19,7 +19,7 @@ a{
 body{
     background: #D5D5D5;
     font-family: 'Open Sans', sans-serif;
-    
+    overflow-x: hidden;
 }
 
 
